netflix-clone terceiro pull

--- a/index.html
+++ b/index.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css/main.css">
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-  <title>Netflix</title>
-</head>
-<body>
-      <header>
-        <div class="container">
-          <h2 class="logo">NETFLIX</h2>
-          <nav>
-             <a href="#">Início</a>
-             <a href="#">Séries</a>
-             <a href="#">Filmes</a>
-             <a href="#">Documentarios</a>
-             <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos error asperiores iusto, rerum veritatis praesentium vero eius dolorem, iure harum veniam exercitationem ipsum animi ex ipsam optio provident, incidunt nam?</h1>
-          </nav>
-        </div>
-      </header>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css/main.css" />
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+    <title>Netflix</title>
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <h2 class="logo">NETFLIX</h2>
+        <nav>
+          <a href="#">Início</a>
+          <a href="#">Séries</a>
+          <a href="#">Filmes</a>
+          <a href="#">Documentarios</a>
+          <h1>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos error
+            asperiores iusto, rerum veritatis praesentium vero eius dolorem,
+            iure harum veniam exercitationem ipsum animi ex ipsam optio
+            provident, incidunt nam?
+          </h1>
+        </nav>
+      </div>
+    </header>
+    <main>
+        
+    </main>
+  </body>
 </html>
