--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <title>Netflix</title>
   </head>
-  <body>
+  <!-- <body>
     <header>
       <div class="container">
         <h2 class="logo">NETFLIX</h2>
@@ -27,7 +27,7 @@
       </div>
     </header>
     <main>
-        
+
     </main>
   </body>
-</html>
+</html> -->
