--- a/index.html
+++ b/index.html
@@ -6,28 +6,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css/main.css" />
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+
+    <!-- responsividade -->
+    <link rel="stylesheet" href="style.css/responsive.css">
+
+
+    <!-- OWL CSS -->
+    <link rel="stylesheet" href="style.css/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="style.css/owl/owl.theme.default.min.css">
+
     <title>Netflix</title>
   </head>
-  <!-- <body>
+  <body>
     <header>
       <div class="container">
         <h2 class="logo">NETFLIX</h2>
         <nav>
-          <a href="#">Início</a>
+          <a href="#">Inicio</a>
           <a href="#">Séries</a>
           <a href="#">Filmes</a>
-          <a href="#">Documentarios</a>
-          <h1>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos error
-            asperiores iusto, rerum veritatis praesentium vero eius dolorem,
-            iure harum veniam exercitationem ipsum animi ex ipsam optio
-            provident, incidunt nam?
-          </h1>
+          <a href="#">Documentários</a>
         </nav>
       </div>
     </header>
     <main>
-
+        <div class="filme-principal">
+          <div class="container">
+            <h3 class="titulo">The Shawshank Redemption (1994)</h3>
+            <p class="descricao">Framed in the 1940s for the double murder of his wife and her lover, upstanding banker Andy Dufresne begins a new life at the Shawshank prison, where he puts his accounting skills to work for an amoral warden. During his long stretch in prison, Dufresne comes to be admired by the other inmates -- including an older prisoner named Red -- for his integrity and unquenchable sense of hope.</p>
+            <button role="button" class="botao">
+                <i class="fas fa-play"></i>
+              ASSISTIR AGORA
+            </button>
+            <button role="button" class="botao" >
+              <i class="fas fa-info"></i>
+              MAIS INFORMAÇÕES
+            </button>
+          </div>
+        </div>
     </main>
+
+    <div class="carousel-filmes">
+      <div class="owl-carousel owl-theme">
+        <div class="item">
+          <img class="box-filme" src="img/mini1.jpg" alt="">
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini2.jpg" alt="">
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini3.jpg" alt="">
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini4.jpg" alt="">
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini5.jpg" alt="">
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini6.jpg" alt="">
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini6.jpg" alt="">
+        </div>
+        
+  </div>
+
+
+
+
+    <script src="https://kit.fontawesome.com/bb22ca3601.js" crossorigin="anonymous"></script>
+ 
+    <script src="js/owl/jquery.min.js"></script>
+    <script src="js/owl/owl.carousel.min.js"></script>
+    <script src="js/owl/setup.js"></script>
+
   </body>
-</html> -->
+</html>
