netflix-clone readme final

--- a/index.html
+++ b/index.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css/main.css" />
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-
-    <!-- responsividade -->
+    <!-- Responsividade -->
     <link rel="stylesheet" href="style.css/responsive.css">
-
-
     <!-- OWL CSS -->
     <link rel="stylesheet" href="style.css/owl/owl.carousel.min.css">
     <link rel="stylesheet" href="style.css/owl/owl.theme.default.min.css">
-
     <title>Netflix</title>
   </head>
+
   <body>
     <header>
       <div class="container">
@@ -29,6 +26,7 @@
         </nav>
       </div>
     </header>
+
     <main>
         <div class="filme-principal">
           <div class="container">
@@ -67,19 +65,39 @@
           <img class="box-filme" src="img/mini6.jpg" alt="">
         </div>
         <div class="item">
+          <img class="box-filme" src="img/mini7.jpg" alt="">
+        </div>
+    </div>
+    <div class="carousel-filmes">
+      <div class="owl-carousel owl-theme">
+        <div class="item">
+          <img class="box-filme" src="img/mini8.jpg" alt="">
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini9.jpg" alt="">
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini10.jpg" alt="">
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini4.jpg" alt="">
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini5.jpg" alt="">
+        </div>
+        <div class="item">
           <img class="box-filme" src="img/mini6.jpg" alt="">
         </div>
-        
-  </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini7.jpg" alt="">
+        </div>
+    </div>
 
-
-
-
+    <!-- SCRIPT OWL CAROUSEL AND FONT AWESOME ICONS -->
     <script src="https://kit.fontawesome.com/bb22ca3601.js" crossorigin="anonymous"></script>
- 
     <script src="js/owl/jquery.min.js"></script>
     <script src="js/owl/owl.carousel.min.js"></script>
     <script src="js/owl/setup.js"></script>
-
+    
   </body>
 </html>
